# kompilator

./: CMakeLists.txt  README  README.md
res/: spl.grammar
src/: CMakeLists.txt  evaluator.cpp  evaluator.hpp  grammar.cpp  grammar.hpp  lexeme.cpp  lexeme.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp
tests/: 25.spl
